[package]
name = "kernel"
version = "0.1.0"
edition = "2021"

[lints]
workspace = true

[dependencies]
acpi = "5.0.0"
bootloader_api = "0.11.7"
crossbeam-queue = { version = "0.3.11", default-features = false, features = ["alloc"] }
embedded-graphics = "0.8.1"
futures-util = { version = "0.3.30", default-features = false, features = ["alloc"] }
pc-keyboard = "0.7.0"
spin = "0.9.8"
x2apic = "0.4.3"

[target.'cfg(target_arch="x86_64")'.dependencies]
x86_64 = "0.15.1"
uart_16550 = "0.3.0"
