[package]
name = "kernel"
version = "0.1.0"
edition = "2021"

[lints]
workspace = true

[dependencies]
acpi = "5.2.0"
bootloader_api = "0.11.10"
crossbeam-queue = { version = "0.3.12", default-features = false, features = ["alloc"] }
embedded-graphics = "0.8.1"
futures-util = { version = "0.3.31", default-features = false, features = ["alloc"] }
pc-keyboard = "0.8.0"
spin = "0.10.0"

[target.'cfg(target_arch="x86_64")'.dependencies]
x86_64 = "0.15.2"
uart_16550 = "0.3.2"
x2apic = "0.5.0"
